# realtime-voice-changer

./: .gitignore  README.md  delivery-summary.md  pyproject.toml  start_test_ui.bat  stress_gpu_tts.bat
app/: __init__.py
app/backend/: __init__.py  config.py  db.py  errors.py  main.py  types.py  ws_manager.py
app/desktop/: __init__.py  api_client.py  app.py  webview_shell.py
app/frontend/: common.js  index.html  main.js  settings.html  settings.js  styles.css  voices.html  (+1 more)
docs/: quality_input.example.json  runbook.md
scripts/: benchmark_latency.py  benchmark_tts_loopback.py  build_windows_webview_exe.py  check_env.py  evaluate_quality.py  install_sox.ps1  install_vbcable.ps1  predownload_models.py  run_desktop.py  run_dev.py  run_webview.py  smoke_realtime.py
tests/: test_api_custom_voices.py  test_api_health.py  test_api_loaded_models.py  test_api_metrics_reset.py  test_api_realtime_inject.py  test_api_realtime_ptt.py  test_api_realtime_simulate.py  test_api_siliconflow_settings.py  test_api_voice_delete.py  test_api_voices_errors.py  test_asr_stage2.py  test_audio_devices.py  test_custom_voice_assist_api.py  test_db.py  test_gate_scripts.py  test_metrics.py  test_prompt_store.py  test_realtime_engine_rates.py  test_realtime_ptt_and_correction.py  test_runtime_gpu_gate.py  test_segmenter.py  test_settings_migration.py  test_smoke_realtime_logic.py  test_text_corrector_siliconflow.py  test_tts_fake.py  test_voice_design_assist_api.py  test_voice_service_custom_flow.py  test_voice_service_design_flow.py  test_voice_service_validation.py  test_webview_shell.py
(+15 files in other folders)
